# dpemr

./: Cargo.toml  README.md  a.py  commands
.github/workflows/: ci.yml  release.yml
src/: db.rs  logger.rs  main.rs  process.rs
src/db/: mod.rs  show.rs  table.rs
tester/: .conf.json  accept_tests.sh  my.cfg  run_tests.sh
tester/Test_010_create_table/: expected-output.txt  go.sh
tester/Test_011_use_different_table/: go.sh
tester/Test_020_insert_into_table/: expected-output.txt  go.sh
tester/Test_030_run_experiments/: expected-output.txt  go.sh
tester/Test_031_run_experiments_parallel/: expected-output.txt  go.sh
tester/Test_033_run_experiments_with_failing/: expected-output.txt  go.sh
tester/Test_034_keep_running_experiments/: expected-output.txt  go.sh
