[package]
name = "dpr"
version = "0.1.1"
authors = ["Gokberk Kocak <gk34@st-andrews.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
tokio = { version = "1.5", features = ["full"] }
mysql_async = "0.27"
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8"