[package]
name = "dpr"
version = "0.1.1"
authors = ["Gokberk Kocak <gk34@st-andrews.ac.uk>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
tokio = { version = "1.5", features = ["process", "macros", "rt-multi-thread"] }
mysql_async = "0.28"
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }